# heychar-agent

./: .env.example  .gitignore  README.md  livekit.toml  pyproject.toml
src/: agent.py  create_room.py  hr-agent.py
src/livekit/plugins/: logging_wrappers.py
src/livekit/plugins/vosk/: __init__.py  stt.py
src/livekit/plugins/yandex/: __init__.py  auth.py  llm.py  stt.py  tts.py  version.py
